логи и джавадок